<resources>
    <string name="app_name">Just Java</string>
    <string name="name">Name</string>
    <string name="topping">Topping</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="order">Order</string>
    <string name="increment">You cannot have more than 100 cups of coffee</string>
    <string name="decrement">You cannot have less than 1 cup of coffee</string>
    <string name="subject">Just Java order for </string>
    <string name="order_name">Name: </string>
    <string name="order_cream">Add whipped cream? </string>
    <string name="order_chocolate">Add chocolate? </string>
    <string name="order_quantity">Quantity: </string>
    <string name="total">Total: $</string>
    <string name="thank_you">Thank you!</string>
</resources>
